build_output.txt
   Compiling zterm v0.1.0 (C:\Users\Zero\Documents\coding\Zterm\app)
error[E0432]: unresolved import `crate::ai::local_llm::LocalModel`
 --> app\src\ai\local_llm\discovery.rs:3:62
  |
3 | use crate::ai::local_llm::{LocalLLMClient, LocalLLMProvider, LocalModel};
  |                                                              ^^^^^^^^^^ no `LocalModel` in `ai::local_llm`
  |
  = help: consider importing this struct instead:
          crate::ai::local_llm::client::LocalModel

warning: unused imports: `discover_providers` and `list_models_for_provider`
  --> app\src\ai\local_llm\mod.rs:12:21
   |
12 | pub use discovery::{discover_providers, list_models_for_provider};
   |                     ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `settings::LocalLLMSettings`
  --> app\src\ai\local_llm\mod.rs:14:9
   |
14 | pub use settings::LocalLLMSettings;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `then` found for opaque type `impl futures::Stream<Item = std::result::Result<bytes::Bytes, reqwest::Error>>` in the current scope
  --> app\src\ai\local_llm\client.rs:56:46
   |
56 |         let stream = response.bytes_stream().then(|bytes_result| async move {
   |                      ------------------------^^^^
   |
   = help: items from traits can only be used if the trait is in scope
help: the following traits which provide `then` are implemented but not in scope; perhaps you want to import one of them
   |
 3 + use futures::StreamExt;
   |
 3 + use futures_lite::StreamExt;
   |
 3 + use futures_lite::stream::StreamExt;
   |
 3 + use tokio_stream::stream_ext::StreamExt;
   |
help: there is a method `and_then` with a similar name
   |
56 |         let stream = response.bytes_stream().and_then(|bytes_result| async move {
   |                                              ++++

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> app\src\ai\local_llm\client.rs:58:20
   |
58 |                 Ok(chunk) => {
   |                    ^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: all local variables must have a statically known size

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
   --> app\src\ai\local_llm\client.rs:58:17
    |
 58 |                 Ok(chunk) => {
    |                 ^^^^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `std::prelude::v1::Ok`
   --> C:\Users\Zero\.rustup\toolchains\1.92.0-x86_64-pc-windows-gnu\lib/rustlib/src/rust\library\core\src\result.rs:557:17
    |
557 | pub enum Result<T, E> {
    |                 ^ required by this bound in `std::prelude::v1::Ok`
...
561 |     Ok(#[stable(feature = "rust1", since = "1.0.0")] T),
    |     -- required by a bound in this tuple variant

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
   --> app\src\ai\local_llm\client.rs:62:17
    |
 62 |                 Err(e) => Err(anyhow!("Stream error: {}", e)),
    |                 ^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `[u8]`
note: required by a bound in `Err`
   --> C:\Users\Zero\.rustup\toolchains\1.92.0-x86_64-pc-windows-gnu\lib/rustlib/src/rust\library\core\src\result.rs:557:17
    |
557 | pub enum Result<T, E> {
    |                 ^ required by this bound in `Err`
...
566 |     Err(#[stable(feature = "rust1", since = "1.0.0")] E),
    |     --- required by a bound in this tuple variant

error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
   --> app\src\ai\local_llm\client.rs:56:52
    |
 56 |         let stream = response.bytes_stream().then(|bytes_result| async move {
    |                                                    ^^^^^^^^^^^^ doesn't have a size known at compile-time
    |
    = help: the trait `Sized` is not implemented for `[u8]`
note: required by an implicit `Sized` bound in `std::result::Result`
   --> C:\Users\Zero\.rustup\toolchains\1.92.0-x86_64-pc-windows-gnu\lib/rustlib/src/rust\library\core\src\result.rs:557:17
    |
557 | pub enum Result<T, E> {
    |                 ^ required by the implicit `Sized` requirement on this type parameter in `Result`

Some errors have detailed explanations: E0277, E0432, E0599.
For more information about an error, try `rustc --explain E0277`.
warning: `zterm` (lib) generated 2 warnings
error: could not compile `zterm` (lib) due to 6 previous errors; 2 warnings emitted
